# SnuQS

./: .clang-format  .clangd  .gitignore  .gitmodules  CMakeLists.txt  LICENSE  MANIFEST.in  README.md  baio.config  pyproject.toml  requirements.txt  setup.cfg  setup.py  socl-io.config  test.sh
python/snuqs/cpp/: CMakeLists.txt  __init__.py  _snuqs.cpp  compiler.cpp
src/: CMakeLists.txt  configure.hpp  configure_cpu.hpp  configure_gpu.hpp  constants.h  error.hpp  gpu_utils.cpp  gpu_utils.h  gpu_utils.hpp  job.cpp  job.hpp  logger.h  main.cpp  model.hpp  module.cc  module.cpp  quantumCircuit.cpp  quantumCircuit.hpp  string.hpp  tensor.cpp  tensor.hpp  tensor_network.cpp  types.h
src/analyzer/: CMakeLists.txt  circuitAnalyzer.cpp  circuitAnalyzer.hpp
src/braket/: CMakeLists.txt
src/braket/gates/: module.cc
src/braket/snuqs/: aws_device.py  dag.py  device.py  gate_operations.py  linalg_utils.py  noise_operations.py  observables.py  offload.py  operation.py  operation_helpers.py  quantumpy.py  result_types.py  simulation.py  simulator.py  (+3 more)
src/buffer/: CMakeLists.txt  buffer.h  cuda_buffer.cc  memory_buffer.cc  mt_raid.cc  mt_raid.h  storage_buffer.cc
src/circuit/: CMakeLists.txt  arg.cc  arg.h  circuit.cc  circuit.h  creg.cc  creg.h  gate.cpp  gate.h  gate_cpu_impl.cpp  gate_cpu_impl.h  gate_cuda.cu  gate_cuda.h  gate_factory.cpp  gate_factory.h  gate_interface.cpp  gate_interface.h  parameter.cc  parameter.h  qop.cc  qop.h  qreg.cc  qreg.h  quantum_circuit.cpp  quantum_circuit.h  reg.cc  reg.h
src/compiler/: CMakeLists.txt  circuitGenerator.cpp  circuitGenerator.hpp  circuitOptimizer.cpp  circuitOptimizer.hpp  circuitPartitioner.cpp  circuitPartitioner.hpp  circuit_generator.cpp  circuit_generator.h  circuit_optimizer.cpp  circuit_optimizer.h  circuit_partitioner.cpp  circuit_partitioner.h  compiler.cpp  compiler.h  gateBlocker.cpp  gateBlocker.hpp  gate_blocker.cpp  gate_blocker.h  initializer.cpp  initializer.h  initializer.hpp  optimizer.cpp  optimizer.h  optimizerUtils.cpp  optimizerUtils.hpp  optimizer_utils.cpp  optimizer_utils.h  permutation.cpp  permutation.hpp  preprocessor.cpp  preprocessor.h  preprocessor.hpp  semanticChecker.cpp  semanticChecker.hpp  semantic_checker.cpp  semantic_checker.h  snuqlCompiler.cpp  snuqlCompiler.hpp  snuqlOptimizer.cpp  (+7 more)
src/dag/: CMakeLists.txt  dag.cc  dag.cpp  dag.h
src/directed-acyclic-graph/: CMakeLists.txt  directed-acyclic-graph.cc  directed-acyclic-graph.h
src/executor/: CMakeLists.txt  __init__.py  creg.cpp  creg.h  executor.cpp  executor.h  qop.cpp  qop.h  qreg.cpp  qreg.h  simulator_cuda.cu  simulator_cuda.cu_backup  simulator_cuda.h  simulator_interface.h  simulator_multi_cuda.cu  simulator_multi_cuda.h  simulator_omp.cpp  simulator_omp.h  simulator_omp_io.cpp  simulator_omp_io.h
src/gate/: CMakeLists.txt  gate.cpp  gate.hpp  gate_cpu.cpp  gate_cpu.hpp  gate_gpu.cu  gate_gpu.hpp
src/gates/: gate_operation.cc  gate_operation.h  state_vector.h
src/include/: assertion.h  cuda_api.h  types.h
src/launcher/: CMakeLists.txt  launcher.cc  launcher.h
src/misc/: CMakeLists.txt
src/optimizer/: CMakeLists.txt  optimizer.cc  optimizer.h
src/qasm_compiler/: __snuqs.inc  qasm_circuit_generator.py  qasm_compiler.cc  qasm_compiler.h  qasm_opaque_gate_checker.py  qasm_parser.h  qasm_parser.py  qasm_preprocessor.cc  qasm_preprocessor.h  qasm_stage.py
src/qdd/: CMakeLists.txt  qdd.cc  qdd.h
src/quantum-circuit/: CMakeLists.txt  classical-register.cc  classical-register.h  quantum-circuit.cc  quantum-circuit.h  quantum-operation.cc  quantum-operation.h  quantum-register.cc  quantum-register.h
src/quantum-decision-diagram/: CMakeLists.txt  quantum-decision-diagram.cc  quantum-decision-diagram.h
src/quantum-decision-diagram-simulator/: CMakeLists.txt  quantum-decision-diagram-simulator.cc  quantum-decision-diagram-simulator.h
src/quantum_circuit/: creg.cc  creg.h  qop.cc  qop.h  qreg.cc  qreg.h  quantum_circuit.cc  quantum_circuit.h
src/rt/: CMakeLists.txt  rt_handle.cpp  rt_storage.h  rt_type.h  rt_worker_pool.h
src/runtime/: CMakeLists.txt  __init__.py  rt_device.cc  rt_device.cpp  rt_error.h  rt_event.h  rt_host.h  rt_queue.cc  rt_soft_raid0.h  rt_storage.cc  rt_task.cc  rt_task.h  runtime.h  runtime_stream.h  runtime_types.h  runtime_worker_pool.cc  runtime_worker_pool.h
src/runtime_bu/: rt.h  rt_event.cc  rt_handle.h  rt_queue.h
src/simulator/: CMakeLists.txt  contraction_cpu.cpp  contraction_gpu.cpp  density_cpu.cpp  density_cpu_io.cpp  density_gpu.cpp  density_gpu_io.cpp  executor.cc  executor.h  job.cpp  job.h  kernels.cu  nosimulator.cpp  qop_impl.cu  qop_impl.h  run.h  run_cpu.cc  run_cpu.cu  run_multi_gpu.cc  run_multi_gpu.cu  run_single_gpu.cc  run_single_gpu.cu  run_storage.cc  simulator.cc  simulator.cpp  simulator.h  simulator.hpp  statevector_cpu.cpp  statevector_cpu_io.cpp  statevector_gpu.cpp  statevector_gpu_io.cc  statevector_gpu_io.cpp  statevector_gpu_io.cpp_back  statevector_simulator.cc  statevector_simulator.h  statevector_simulator_cuda.cu  statevector_simulator_cuda.h  transpile.cc  transpile.h
src/snurt/: CMakeLists.txt  addr.h  api.cc  api.h  api_cuda.cu  api_io.cc  blkio.cc  blkio.h  command.h  command_queue.cc  command_queue.h  context.cc  context.h  context_cuda.cu  context_io.cc  dispatcher.cc  dispatcher.h  libio.cc  libio.h  memory_allocator.cc  memory_allocator.h  types.h  worker.cc  worker.h  worker_cuda.cu  worker_cuda.h  worker_io.cc  worker_io.h
src/socl/: CMakeLists.txt  baio.c  baio.h  baio_backup.c  baio_utils.h  socl-gpu.c  socl-gpu.h  socl-io-test.c  socl-io.c  socl-io.h  socl-qp.h  socl-test.c  socl.c  socl.cpp  socl.h  socl.hpp
src/statevector-simulator/: CMakeLists.txt  statevector-simulator.cc  statevector-simulator.h
src/tensor-network/: CMakeLists.txt  tensor-network.cc  tensor-network.h
src/tensor-network-simulator/: CMakeLists.txt  tensor-network-simulator.cc  tensor-network-simulator.h
src/transpile/: CMakeLists.txt  transpile.cc
src/transpiler/: CMakeLists.txt  snuqlTranspiler.cpp  snuqlTranspiler.hpp  transpiler.cpp  transpiler.hpp
(+694 files in other folders)
